# esphomeapi

./: .gitignore  Cargo.toml  build.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: CI.yml
crates/esphomeapi/: Cargo.toml  build.rs
crates/esphomeapi-manager/: Cargo.toml
crates/esphomeapi-manager-node/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
crates/esphomeapi-manager-node/src/: discovery.rs  lib.rs  manager.rs
crates/esphomeapi-manager-node/src/entity/: light.rs  mod.rs  switch.rs
crates/esphomeapi-manager/src/: lib.rs
crates/esphomeapi-manager/src/entity/: light.rs  mod.rs  switch.rs
crates/esphomeapi-node/: Cargo.toml  index.d.ts  index.js  package.json
crates/esphomeapi-node/src/: client.rs  lib.rs
crates/esphomeapi-node/src/model/: mod.rs  services.rs
crates/esphomeapi/src/: client.rs  discovery.rs  lib.rs
crates/esphomeapi/src/connection/: mod.rs
crates/esphomeapi/src/connection/codec/: plain.rs
crates/esphomeapi/src/model/: entity_info.rs  entity_state.rs  mod.rs  services.rs
crates/esphomeapi/src/protos/: api.proto
src/: client.rs  lib.rs  model.rs  utils.rs
src/connection/: mod.rs  utils.rs
src/connection/codec/: mod.rs  noise.rs  plain.rs
src/model/: conversions.rs  entity_info.rs  entity_state.rs  mod.rs  services.rs
src/proto/: api.proto  api_options.proto
src/protos/: api.proto  api_options.proto
wasm/: Cargo.toml
