[package]
name = "esphomeapi-rs"
version = "0.1.0"
authors = ["Patrik Kovalovszky <kovapatrik@gmail.com>"]
description = "The Snow library compiled to WebAssembly"
edition = "2021"


[dependencies]
base64 = "0.22.1"
prost = "0.13.2"
tokio = { version = "1.37.0", features = ["net", "sync", "io-util", "rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
bytes = "1.6.0"
varuint = "0.7.1"
tokio-stream = "0.1.15"
noise-protocol = "0.2.0"
noise-rust-crypto = "0.6.2"
protobuf = "3.4.0"
futures = "0.3.30"
enumflags2 = "0.7.10"
lazy_static = "1.5.0"

[build-dependencies]
prost-build = "0.13.2"
protobuf-codegen = "3.4.0"
