[package]
name = "esphomeapi-manager-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
esphomeapi-manager = { path = "../esphomeapi-manager" }
napi = { version = "3.0.0-beta", features = ["tokio_rt"] }
napi-derive = "3.0.0-beta"

[build-dependencies]
napi-build = "2.1.5"
