[package]
name = "esphomeapi-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
esphomeapi = { path = "../esphomeapi" }
napi = { workspace = true, features = ["tokio_rt"] }
napi-derive = { workspace = true }

[build-dependencies]
napi-build = "2.1.5"

[profile.release]
lto = true
codegen-units = 1
