[package]
name = "esphomeapi"
version = "0.1.0"
authors = ["Patrik Kovalovszky <kovapatrik@gmail.com>"]
description = "Rust client for ESPHome native API"
edition = "2021"

[dependencies]
base64 = "0.22.1"
tokio = { version = "1.41.1", features = [
  "net",
  "sync",
  "io-util",
  "rt-multi-thread",
  "macros",
  "signal",
] }
tokio-util = { version = "0.7.11", features = ["codec"] }
bytes = "1.9.0"
varuint = "0.7.1"
tokio-stream = "0.1.15"
noise-protocol = "0.2.0"
noise-rust-crypto = "0.6.2"
protobuf = "3.7.1"
futures = "0.3.31"
enumflags2 = "0.7.10"
lazy_static = "1.5.0"
protobuf-json-mapping = "3.7.1"
napi = { workspace = true }
napi-derive = { workspace = true }

[build-dependencies]
protobuf = "3.7.1"
protobuf-codegen = "3.7.1"
